--- a/testproject/templates/index.html
+++ b/testproject/templates/index.html
@@ -11,19 +11,77 @@
     <p>Result of 5 + 7: <span id="result"></span></p>
 
     <script>
-        createModule().then(Module => {
-            // for testing
-            console.log("Wasm module loaded successfully");
+        class Lexi {
+            constructor() {
+                this.module = this.initModule()
+            }
+
+            initModule = () => {
+                // load wasm module
+                createModule()
+                .then(Module => {
+                    console.error( "Lexi WASM module loaded" )
+                    this.module = Module
+                }).catch(err => {
+                    console.error( "Failed to load Lexi WASM module", err )
+                })
+            }
+
+            ensureModuleLoaded = (callback) => {
+                if ( this.module ) {
+                    callback()
+                } else {
+                    // load wasm module
+                    createModule()
+                    .then(Module => {
+                        console.error( "Lexi WASM module loaded" )
+                        this.module = Module
+                        callback()
+                    }).catch(err => {
+                        console.error( "Failed to load Lexi WASM module", err )
+                    })
+                }
+            }
+
+            add = () => {
+                this.ensureModuleLoaded( () => {
+                    const result = this.module._add(5, 7);
+                    document.getElementById('result').textContent = result;
+                })
+            }
+        }
+
+        const lexi = new Lexi()
+        lexi.add()
+
+        // callback function
+        /*
+        function tryMe(param1, param2) {
+        alert(param1 + " and " + param2);
+        }
+
+        // callback executer 
+        function callbackTester(callback) {
+        callback();
+        }
+
+        // test function
+        callbackTester(function() {
+        tryMe("hello", "goodbye");
+        });*/
+
+        /*
+        createModule()
+        .then(Module => {
+            console.log("Lexi loaded successfully");
+        
             const result = Module._add(5, 7);
             document.getElementById('result').textContent = result;
-
-            // functionality
-            const tokenizer = Module._tokenize();
-            console.log(Module.UTF8ToString(tokenizer));
-            
         }).catch(err => {
-            console.error("Failed to load Wasm module:", err);
-        });
+            console.error("Failed to load Lexi WASM module", err);
+        })*/
+
+        
     </script>
 </body>
 </html>
