trying to figure out how to pass const char* from js to wasm

--- a/testproject/templates/index.html
+++ b/testproject/templates/index.html
@@ -56,10 +56,18 @@
                     document.getElementById('result').textContent = result;
                 })
             }
+
+            testStr = () => {
+                this.ensureModuleLoaded( () => {
+                    const result = this.module._testStr()
+                    console.log( result )
+                })
+            }
         }
 
         const lexi = new Lexi()
         lexi.add()
+        lexi.testStr()
     </script>
 </body>
 </html>
